; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_671.c_create_rand_string.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_671.c_create_rand_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @create_rand_string(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %3
  %10 = load i32, i32* %6, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %6, align 4
  br label %12

12:                                               ; preds = %9, %3
  br label %13

13:                                               ; preds = %46, %12
  %14 = load i32, i32* %5, align 4
  %15 = add nsw i32 %14, -1
  store i32 %15, i32* %5, align 4
  %16 = icmp ne i32 %14, 0
  br i1 %16, label %17, label %49

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %6, align 4
  %21 = add nsw i32 %19, %20
  %22 = srem i32 %21, 62
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = icmp sle i32 %23, 9
  br i1 %24, label %25, label %29

25:                                               ; preds = %17
  %26 = load i32, i32* %6, align 4
  %27 = add nsw i32 %26, 48
  %28 = load i32*, i32** %4, align 8
  store i32 %27, i32* %28, align 4
  br label %46

29:                                               ; preds = %17
  %30 = load i32, i32* %6, align 4
  %31 = icmp sge i32 %30, 10
  br i1 %31, label %32, label %40

32:                                               ; preds = %29
  %33 = load i32, i32* %6, align 4
  %34 = icmp sle i32 %33, 35
  br i1 %34, label %35, label %40

35:                                               ; preds = %32
  %36 = load i32, i32* %6, align 4
  %37 = sub nsw i32 %36, 10
  %38 = add nsw i32 %37, 65
  %39 = load i32*, i32** %4, align 8
  store i32 %38, i32* %39, align 4
  br label %45

40:                                               ; preds = %32, %29
  %41 = load i32, i32* %6, align 4
  %42 = sub nsw i32 %41, 36
  %43 = add nsw i32 %42, 97
  %44 = load i32*, i32** %4, align 8
  store i32 %43, i32* %44, align 4
  br label %45

45:                                               ; preds = %40, %35
  br label %46

46:                                               ; preds = %45, %25
  %47 = load i32*, i32** %4, align 8
  %48 = getelementptr inbounds i32, i32* %47, i32 1
  store i32* %48, i32** %4, align 8
  br label %13

49:                                               ; preds = %13
  %50 = load i32, i32* %6, align 4
  %51 = shl i32 %50, 1
  ret i32 %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
